fuel sensor graph
